--- a/polybar/config
+++ b/polybar/config
@@ -25,6 +25,59 @@ alert =             ${solarized.red}
 primary =           ${solarized.violet}
 secondary =         ${solarized.green}
 
+[bar/desktop]
+;monitor = ${env:MONITOR:HDMI-1}
+width = 100%
+height = 27
+;offset-x = 1%
+;offset-y = 1%
+radius = 0.0
+fixed-center = false
+
+background = ${colors.background}
+foreground = ${colors.foreground}
+
+line-size = 3
+line-color = ${colors.foreground}
+
+border-size = 2
+border-color = ${colors.background}
+
+padding-left = 0
+padding-right = 2
+
+module-margin = 2
+
+font-0 = "UbuntuMono Nerd Font:size=10;2"
+font-1 = "UbuntuMono Nerd Font:size=16;3"
+font-2 = "Font Awesome 5 Free:style=Regular:pixelsize=8;1"
+font-3 = "Font Awesome 5 Free:style=Solid:pixelsize=9;1"
+font-4 = "Font Awesome 5 Brands:pixelsize=8;1"
+font-5 = "Fira Mono:size=11;0"
+font-6 = "Fira Code:size=10;0"
+font-7 = "Source Code Pro:style=Semibold:size=9;0"
+
+modules-left = i3 xwindow
+modules-center = 
+modules-right = pulseaudio memory cpu wlan eth temperature date
+
+tray-position = right
+tray-padding = 0
+;tray-background = #0063ff
+
+;wm-restack = bspwm
+;wm-restack = i3
+
+;override-redirect = true
+
+;scroll-up = bspwm-desknext
+;scroll-down = bspwm-deskprev
+
+;scroll-up = i3wm-wsnext
+;scroll-down = i3wm-wsprev
+
+cursor-click = pointer
+cursor-scroll = ns-resize
 
 [bar/laptop]
 ;monitor = ${env:MONITOR:HDMI-1}
@@ -54,8 +107,9 @@ font-1 = "UbuntuMono Nerd Font:size=16;3"
 font-2 = "Font Awesome 5 Free:style=Regular:pixelsize=8;1"
 font-3 = "Font Awesome 5 Free:style=Solid:pixelsize=9;1"
 font-4 = "Font Awesome 5 Brands:pixelsize=8;1"
-font-5 = "Fira Mono:size=10;0"
+font-5 = "Fira Mono:size=11;0"
 font-6 = "Fira Code:size=10;0"
+font-7 = "Source Code Pro:style=Semibold:size=9;0"
 
 modules-left = i3 xwindow
 modules-center = 
@@ -91,9 +145,11 @@ type = internal/xkeyboard
 
 
 label-layout = %name%
+label-layout-font = 6
 
 label-indicator-padding = 2
 label-indicator-margin = 1
+label-indicator-on-font = 6
 
 label-indicator-on = %icon% 
 indicator-icon-0 = caps lock;-CL;CL
@@ -111,17 +167,20 @@ wrapping-scroll = false
 ;pin-workspaces = true
 
 label-mode-padding = 2
+label-mode-font = 9
 label-mode-foreground = #000
 label-mode-background = ${colors.primary}
 
 ; focused = Active workspace on focused monitor
 label-focused = %index%
+label-focused-font = 6
 label-focused-background = ${colors.background-alt}
 label-focused-underline= ${colors.primary}
 label-focused-padding = 2
 
 ; unfocused = Inactive workspace on any monitor
 label-unfocused = %index%
+label-unfocused-font = 6
 label-unfocused-padding = 2
 
 ; visible = Active workspace on unfocused monitor
@@ -129,11 +188,13 @@ label-visible = %index%
 label-visible-background = ${self.label-focused-background}
 label-visible-underline = ${self.label-focused-underline}
 label-visible-padding = ${self.label-focused-padding}
+label-visible-font = 6
 
 ; urgent = Workspace with urgency hint set
 label-urgent = %index%
 label-urgent-background = ${colors.alert}
 label-urgent-padding = 2
+label-urgent-font = 6
 
 ; Separator in between workspaces
 ; label-separator = |
@@ -179,6 +240,7 @@ format-prefix = " "
 
 format = <label> <ramp-coreload>
 label = "%percentage%%"
+label-font = 6
 
 ramp-coreload-spacing = 0
 ramp-coreload-font = 7
@@ -198,6 +260,7 @@ format = <label> <ramp-used><ramp-swap-used>
 format-prefix = " "
 format-prefix-font = 4
 label =%gb_used%
+label-font = 6
 
 ramp-swap-used-foreground = ${colors.alert}
 ramp-used-foreground = ${colors.secondary}
@@ -229,6 +292,7 @@ interval = 1
 format-connected = <label-connected>
 format-connected-padding = 1
 label-connected = "%upspeed%   %downspeed%  "
+label-connected-font = 6
 
 format-disconnected =
 ;format-disconnected = <label-disconnected>
@@ -262,16 +326,19 @@ time = %I:%M:%S
 time-alt = "%I:%M:%S %p"
 
 label = %date%%time%
+label-font = 6
 
 [module/pulseaudio]
 type = internal/pulseaudio
 
 format-volume = <label-volume> <ramp-volume>
 label-volume = %percentage%%
+label-volume-font = 6
 label-volume-foreground = ${colors.foreground}
 
 label-muted = %percentage%% %{T4}%{T-}
 label-muted-foreground = ${colors.foreground-alt}
+label-muted-font = 6
 
 ramp-volume-font = 4
 ramp-volume-0 = 
@@ -326,8 +393,11 @@ format-discharging-underline = ${solarized.primary}
 format-discharging-padding = 1
 
 label-charging = "%percentage%% (%time%)"
+label-charging-font = 6
 label-discharging = "%percentage%% (%time%)"
+label-discharging-font = 6
 label-full = "%percentage%%"
+label-full-font = 6
 
 format-full-underline =${colors.primary}
 format-full = <label-full> <ramp-capacity>
@@ -356,7 +426,9 @@ format-warn = <ramp> <label-warn>
 format-warn-underline = ${colors.alert}
 
 label = %temperature-c%°
+label-font = 6
 label-warn = %temperature-c%°
+label-warn-font = 6
 label-warn-foreground = ${colors.alert}
 
 ramp-0 = 
