--- a/polybar/config
+++ b/polybar/config
@@ -517,5 +517,5 @@ type = custom/ipc
 ; Default
 hook-0 = echo ""
 ; Playing/paused show song name and artist
-hook-1 = spotifyctl -q status --format '%artist%: %title%'
+hook-1 = spotifyctl -q status --format '%artist% - %title%'
 
