--- a/i3/config
+++ b/i3/config
@@ -33,8 +33,8 @@ new_window pixel 0
 # hide_edge_borders both
 
 # Set inner/outer gaps
-gaps inner 6
-gaps outer 3
+gaps inner 7
+gaps outer -3
 
 
 
@@ -363,11 +363,12 @@ exec_always --no-startup-id picom -CGb
 exec --no-startup-id nm-applet
 
 # set wallpaper
-exec --no-startup-id nitrogen --random --set-scaled
+exec --no-startup-id nitrogen --random --set-scaled ~/.config/wm/wallpapers/other
 #exec --no-startup-id feh --bg-fill /usr/share/endeavouros/backgrounds/endeavouros_i3.png
 
 # randomize wallpaper
-bindsym $mod+y exec nitrogen --random --set-scaled
+bindsym $mod+y exec nitrogen --random --set-scaled ~/.config/wm/wallpapers/other
+bindsym $mod+Shift+y exec nitrogen --random --set-scaled ~/.config/wm/wallpapers/solarized
 
 # set powersavings for display:
 #exec --no-startup-id xset s 480 dpms 600 600 600
