--- a/polybar/config
+++ b/polybar/config
@@ -52,9 +52,9 @@ module-margin = 2
 
 font-0 = "UbuntuMono Nerd Font:size=10;2"
 font-1 = "UbuntuMono Nerd Font:size=16;3"
-font-2 = "Font Awesome 5 Free:style=Regular:pixelsize=8;1"
-font-3 = "Font Awesome 5 Free:style=Solid:pixelsize=9;1"
-font-4 = "Font Awesome 5 Brands:pixelsize=8;1"
+font-2 = "Font Awesome 6 Free:style=Regular:pixelsize=8;1"
+font-3 = "Font Awesome 6 Free Solid:style=Solid:pixelsize=9;1"
+font-4 = "Font Awesome 6 Brands:pixelsize=8;1"
 font-5 = "Fira Mono:size=11;0"
 font-6 = "Fira Code:size=10;0"
 font-7 = "Source Code Pro:style=Semibold:size=9;0"
@@ -108,9 +108,9 @@ module-margin = 2
 
 font-0 = "UbuntuMono Nerd Font:size=10;2"
 font-1 = "UbuntuMono Nerd Font:size=16;3"
-font-2 = "Font Awesome 5 Free:style=Regular:pixelsize=8;1"
-font-3 = "Font Awesome 5 Free:style=Solid:pixelsize=9;1"
-font-4 = "Font Awesome 5 Brands:pixelsize=8;1"
+font-2 = "Font Awesome 6 Free:style=Regular:pixelsize=8;1"
+font-3 = "Font Awesome 6 Free Solid:style=Solid:pixelsize=9;1"
+font-4 = "Font Awesome 6 Brands:pixelsize=8;1"
 font-5 = "Fira Mono:size=11;0"
 font-6 = "Fira Code:size=10;0"
 font-7 = "Source Code Pro:style=Semibold:size=9;0"
