--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -10,6 +10,8 @@ cursor_blink_interval	0
 scrollback_lines	2000
 detect_urls	yes
 
+window_padding_width 5
+
 background_opacity	1
 allow_remote_control	yes
 
