--- a/polybar/config
+++ b/polybar/config
@@ -4,7 +4,7 @@
 base00 =            #657b83
 base01 =            #586e75
 base02 =            #073642
-base03 =            #002b36
+base03 =            #e6002b36
 base0 =             #839496
 base1 =             #93a1a1
 base2 =             #eee8d5
@@ -293,7 +293,7 @@ ramp-swap-used-8 = █
 
 [module/wlan]
 type = internal/network
-interface = wlan0
+interface = wlp1s0
 interval = 1
 
 format-connected = <label-connected>
@@ -405,7 +405,6 @@ label-full = "%percentage%%"
 label-full-font = 6
 
 format-full = <label-full> <ramp-capacity>
-format-full-prefix = " "
 format-full-padding = 1
 
 ramp-capacity-0 = " "
